components/policies-rd/rings/ring-0/base/konflux-rbac/restrict-binding-system-authenticated/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-restrict-binding-system-authenticated
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
